      events occur within Python.

    - Fixed bug in delete-orphan cascade whereby two one-to-one
      relations from two different parent classes to the same target 
      class would prematurely expunge the instance.
      
- sql
    - Further fixes to the "percent signs and spaces in column/table
       names" functionality. [ticket:1284]
       
0.5.1
========

- orm
    - Removed an internal join cache which could potentially leak 
      memory when issuing query.join() repeatedly to ad-hoc 
      selectables.

    - The "clear()", "save()", "update()", "save_or_update()"
      Session methods have been deprecated, replaced by 
      "expunge_all()" and "add()".  "expunge_all()" has also
      been added to ScopedSession.
      
    - Modernized the "no mapped table" exception and added a more
      explicit __table__/__tablename__ exception to declarative.

    - Concrete inheriting mappers now instrument attributes which
      are inherited from the superclass, but are not defined for
      the concrete mapper itself, with an InstrumentedAttribute that
      issues a descriptive error when accessed. [ticket:1237]

    - Added a new `relation()` keyword `back_populates`. This
      allows configuation of backreferences using explicit
      relations. [ticket:781] This is required when creating
      bidirectional relations between a hierarchy of concrete
      mappers and another class. [ticket:1237]

    - Test coverage added for `relation()` objects specified on
      concrete mappers. [ticket:1237]
    
    - Query.from_self() as well as query.subquery() both disable 
      the rendering of eager joins inside the subquery produced.
      The "disable all eager joins" feature is available publically
      via a new query.enable_eagerloads() generative. [ticket:1276]
      
    - Added a rudimental series of set operations to Query that
      receive Query objects as arguments, including union(),
      union_all(), intersect(), except_(), insertsect_all(),